[metadata]
name = limdberator
description = ...
author = schnusch
license = GPL-2.0-or-later
license_file = COPYING.md

[options]
packages = limdberator
install_requires =
    aiohttp
    jsonschema
test_suite = tests
tests_require =
    black
    flake8
    mypy

[options.extras_require]
systemd = systemd_python

[options.entry_points]
console_scripts =
    limdberator = limdberator.web:main

[flake8]
max-line-length = 88
# E203 conflicts with black
ignore = E501,W503
exclude = .git,__pycache__,build,dist

[mypy]
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
no_implicit_optional = true
